# wiku-miditokvisualizer

./: 24Z_update.md  README.md  railway.json
backend/: .pre-commit-config.yaml  pyproject.toml
backend/core/api/: api.py  logging_middleware.py  model.py
backend/core/service/: midi_processing.py  serializer.py
backend/core/service/tokenizers/: MMM_tokenizer.py  midilike_tokenizer.py  muMIDI_tokenizer.py  octuple_tokenizer.py  perTok_tokenizer.py  remi_tokenizer.py  structured_tokenizer.py  tokenizer_factory.py  tsd_tokenizer.py
backend/tests/: test_tokenizer_factory.py
docs/: GR5_design_proposal.md
frontend/: Dockerfile  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: DataDisplay.css  DataDisplay.tsx  FilePlayback.css  FilePlayback.tsx  MusicInfoDisplay.css  MusicInfoDisplay.tsx  PianoRollDisplay.css  PianoRollDisplay.tsx  RangeSlider.tsx  SingleValueSlider.tsx  Spinner.css  Spinner.tsx  TokenBlock.css  TokenBlock.tsx  TokenInfo.css  TokenInfo.tsx
frontend/src/interfaces/: ApiResponse.tsx
railway/backend/: Dockerfile
railway/frontend/: Dockerfile
