[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.0"
miditok = "^3.0.4"
python-multipart = "^0.0.19"
muspy = "^0.5.0"
mido = "^1.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.0"
black = "^24.10.0"
ruff = "^0.8.3"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.mypy]
python_version = "3.11"
mypy_path = "core/"
disallow_incomplete_defs = true
warn_redundant_casts = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
namespace_packages = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
extend-exclude = [
    ".venv",
    "dist",
]
ignore = [
    "E402",
    "E501",
]
select = [
    "E",
    "F",
    "W",
]

[tool.isort]
profile = "black"
line_length = 119
skip_gitignore = true
multi_line_output = 3
